# smooth_ui_toolkit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.json  library.properties
.github/workflows/: cmake-multi-platform.yml
build-lib/: CMakeCache.txt
build_lib/: CMakeCache.txt
docs/superpowers/plans/: 2026-05-17-c99-port-implementation.md
docs/superpowers/specs/: 2026-05-17-c99-port-design.md
example/: CMakeLists.txt  animate.c  animate_value.c  animate_value_options.c  basic_animate.c  bezier_editor.c  bubbles.c  color_anim.c  comprehensive_test.c  easing_compare.c  easing_curves.c  multi_cursor.c  raylib_helper.c  raylib_helper.h  ringbuf_demo.c  sequence.c  signal_demo.c  spring_raw.c  vec2_demo.c
example/c99/: CMakeLists.txt  raylib_helper.h
include/: mc.h  mc_allocator.h  mc_animate.h  mc_color.h  mc_config.h  mc_easing.h  mc_errors.h  mc_hal.h  mc_math.h  mc_pool.h  mc_ringbuf.h  mc_sequence.h  mc_signal.h  mc_spring.h  mc_types.h  sut.h  sut_errors.h  sut_math.h  sut_types.h
lib/: CMakeLists.txt
lib/example/: animate_value.c  animate_value_options.c  raylib_helper.c
lib/include/: sut_allocator.h  sut_animate.h  sut_color.h  sut_config.h  sut_easing.h  sut_hal.h  sut_pool.h  sut_ringbuf.h  sut_sequence.h  sut_signal.h  sut_spring.h
lib/scripts/: gen_easing_luts.py
lib/src/: sut_color.c  sut_easing.c  sut_easing_luts.c  sut_hal.c  sut_math.c  sut_pool.c  sut_signal.c  sut_spring.c
lib/test/: CMakeLists.txt  test_color.c  test_math.c  test_ringbuf.c  test_signal.c  test_spring.c
scripts/: gen_easing_luts.py
src/: mc_allocator.c  mc_animate.c  mc_color.c  mc_easing.c  mc_easing_luts.c  mc_hal.c  mc_math.c  mc_pool.c  mc_ringbuf.c  mc_sequence.c  mc_signal.c  mc_spring.c  sut_allocator.c  sut_animate.c  sut_easing.c  sut_easing_luts.c  sut_hal.c  sut_pool.c  sut_ringbuf.c  sut_sequence.c
test/: CMakeLists.txt  test_allocator.c  test_animate.c  test_animate_value.c  test_color.c  test_easing.c  test_hal.c  test_math.c  test_pool.c  test_ringbuf.c  test_sequence.c  test_signal.c  test_spring.c
