function(add_mc_test name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} mc)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_mc_test(test_math)
add_mc_test(test_easing)
add_mc_test(test_spring)
add_mc_test(test_color)
add_mc_test(test_animate)
add_mc_test(test_sequence)
add_mc_test(test_ringbuf)
add_mc_test(test_signal)
add_mc_test(test_pool)
add_mc_test(test_animate_value)
