function(add_sut_test name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} sut)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_sut_test(test_math)
add_sut_test(test_easing)
add_sut_test(test_spring)
add_sut_test(test_color)
add_sut_test(test_animate)
add_sut_test(test_sequence)
add_sut_test(test_ringbuf)
add_sut_test(test_signal)
add_sut_test(test_pool)
